<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect4302"
    tools:context=".Activity1.MainActivity">


    <TextView
        android:id="@+id/tvInici"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rect4359"
        android:fontFamily="@font/audiowide"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="15sp"
        android:padding="15dp"
        android:text="@string/textad"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageButton
        android:id="@+id/btinfo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boto2"
        android:padding="3sp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_info_details"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/webButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boto2"
        android:drawableBottom="@color/b"
        android:fontFamily="@font/audiowide"
        android:text="@string/text1_3"
        android:textColor="@android:color/black"
        android:textColorHint="#070707"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvInici"
        app:layout_constraintStart_toStartOf="@+id/tvInici"
        app:layout_constraintTop_toBottomOf="@+id/tvInici" />

    <ImageButton
        android:id="@+id/webButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_set_as"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="250dp"
        android:text="ERROR LOADING IMAGE, THERE IS NOT MEMORY ENOUGH"
        android:textColor="#0C0000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
         />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvInici"
        app:layout_constraintStart_toStartOf="@+id/tvInici"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <EditText
        android:id="@+id/etNickName"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:background="#AAF9F6F6"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/text1_7"
        android:inputType="textPersonName"
        android:padding="3sp"
        android:textColorHint="#070707"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bt_ok"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>