<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/fons1">


    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fons1"
        android:foregroundGravity="center_horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/contador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contador"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

    </com.github.chrisbanes.photoview.PhotoView>


    <TextView
        android:id="@+id/tv2act"
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/vineta"
        android:capitalize="none"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="12sp"
        android:lines="6"
        android:paddingLeft="35sp"
        android:paddingTop="60sp"
        android:paddingRight="35sp"
        android:text="@string/text2_1"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bt2act"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/boto1"
        android:drawableBottom="@android:color/holo_red_dark"
        android:gravity="center_horizontal|center_vertical"
        android:padding="5sp"
        android:text="@string/text2_2"
        android:textColor="#FAF6F6"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarEspera"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="160dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEspera"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/vineta"
        android:fontFamily="@font/audiowide"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingBottom="70sp"
        android:text="@string/text2_3"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBarEspera" />

    <TextView
        android:id="@+id/tvNumFoto"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/pintada"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal|center_vertical"

        android:lineSpacingExtra="10sp"
        android:paddingLeft="40sp"
        android:paddingTop="40sp"
        android:paddingRight="60sp"
        android:paddingBottom="60sp"
        android:text="IMAGE NUMBER 1"
        android:textAllCaps="true"
        android:textColor="@color/b"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/contador"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#CD0505"
        android:gravity="center_horizontal|center_vertical"
        android:text="1"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>